# agentx-qa-evaluator

./: .env  Dockerfile  README.md  agent.json  agent_card.json  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: main.yml  test-and-publish.yml
app/: main.py  nebius_client.py  scorer.py
src/: agent.py  executor.py  models.py  scorer.py  server.py  utils.py
